Progress lists should no longer keep an annoying top margin when word-wrap is triggered

--- a/stylesheets/components/_progress-lists.scss
+++ b/stylesheets/components/_progress-lists.scss
@@ -51,7 +51,7 @@
 
 
 .progress-list__label {
-    display: inline-block;
+    display: inline;
     padding-left: 40px;
     position: relative;
     text-align: left;
